--- a/src/css/wazi.webflow.css
+++ b/src/css/wazi.webflow.css
@@ -3235,7 +3235,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-width: 32%;
+  max-width: 30%;
   min-width: 22%;
   margin: 4px;
   padding: 10px 12px 8px;
@@ -3320,7 +3320,7 @@ a {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  color: #999;
+  color: #666;
   font-size: 0.8em;
   line-height: 1.3em;
 }
@@ -3697,7 +3697,6 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-width: 70%;
 }
 
 .search__list-item_geography-type {
@@ -3705,12 +3704,16 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 30%;
+  width: 90px;
   padding-left: 16px;
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
   opacity: 0.47;
   font-size: 0.85em;
 }
@@ -4140,62 +4143,29 @@ a {
 
 .map__tooltip_geography-chip {
   position: absolute;
-  left: 8px;
-  top: -8px;
+  left: 7px;
+  top: -6px;
   right: auto;
   bottom: auto;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 16px;
+  height: 14px;
+  padding-top: 1px;
   padding-right: 4px;
-  padding-left: 4px;
+  padding-left: 5px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  border-radius: 3px;
+  border-radius: 100px;
   background-color: #39ad84;
   color: #fff;
-  font-size: 0.8em;
-  letter-spacing: 1px;
+  font-size: 0.65em;
+  line-height: 100%;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
-}
-
-.point-data__h2_bg {
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  z-index: -1;
-  display: none;
-  border-radius: 2px;
-}
-
-.point-data__h2_bg._1 {
-  background-color: #dee7ff;
-}
-
-.point-data__h2_bg._2 {
-  background-color: #eadbfa;
-}
-
-.point-data__h2_bg._3 {
-  background-color: #ffe3fc;
-}
-
-.point-data__h2_bg._2 {
-  background-color: #eadbfa;
-}
-
-.point-data__h2_bg._3 {
-  background-color: #ffe1ee;
-}
-
-.point-data__h2_bg._1 {
-  background-color: #dee7ff;
 }
 
 .styles__map-tooltips {
@@ -4602,13 +4572,21 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-width: 90%;
-  margin: -4px;
+  min-width: 416px;
+  padding-right: 4px;
+  padding-left: 4px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
 }
 
 .content__rich-data--open {
@@ -4703,15 +4681,52 @@ a {
 
 .content__map_location {
   position: absolute;
-  left: 0%;
-  top: 24px;
-  right: 0%;
+  top: 28px;
   bottom: auto;
   z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  padding: 4px 2px 8px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+  border-radius: 24px;
+  background-color: hsla(0, 0%, 100%, 0.63);
+  box-shadow: 0 0 0 -1px rgba(0, 0, 0, 0.2), 0 1px 6px -2px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 400ms ease;
+  transition: all 400ms ease;
+}
+
+.content__map_location:hover {
+  background-color: #fff;
+}
+
+.breadcrumb--map {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 32px;
+  max-width: 110px;
+  margin: 4px;
+  padding-right: 12px;
+  padding-left: 12px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
@@ -4721,21 +4736,6 @@ a {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-}
-
-.breadcrumb--map {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: 24px;
-  max-width: 110px;
-  margin: 4px;
-  padding-right: 8px;
-  padding-left: 8px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -4744,7 +4744,8 @@ a {
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
-  border-radius: 12px;
+  border: 1px solid transparent;
+  border-radius: 100px;
   background-color: #666;
   background-image: none;
   box-shadow: 0 2px 7px -4px #000;
@@ -4757,6 +4758,7 @@ a {
 }
 
 .breadcrumb--map:hover {
+  border-color: #ccc;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0.1)));
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
   color: #fff;
@@ -4764,7 +4766,16 @@ a {
 
 .breadcrumb--map.last {
   max-width: 250px;
-  background-color: #39ad84;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #39ad84;
+  background-color: #333;
+}
+
+.breadcrumb--map.last:hover {
+  border-color: #e6e6e6;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0.1)));
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
 }
 
 .content__rich-data--close {
@@ -5005,12 +5016,6 @@ a {
 
 .content__map_zoom-settings:hover {
   color: #333;
-}
-
-.content__map_zoom-settings.active {
-  border-color: #ade4d0;
-  background-color: #39ad84;
-  color: #fff;
 }
 
 .map__zoom-settings_label {
@@ -5261,7 +5266,7 @@ a {
   font-weight: 700;
 }
 
-.styles {
+.styles__wrapper {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -5355,6 +5360,179 @@ a {
 
 .hide {
   display: none;
+}
+
+.key-metric_description {
+  margin-top: 6px;
+  padding-top: 6px;
+  border-top: 1px dashed #ccc;
+  color: #999;
+  font-size: 0.8em;
+  line-height: 130%;
+}
+
+.map__location-info {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  min-width: 450px;
+  margin-top: 4px;
+  padding-right: 8px;
+  padding-left: 8px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+
+.breadcrumb__geography-chip {
+  position: absolute;
+  top: -6px;
+  bottom: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 12px;
+  padding-right: 4px;
+  padding-left: 4px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 100px;
+  background-color: #39ad84;
+  font-size: 0.6em;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.map__location-info_metric {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 12px;
+  padding-left: 12px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  border-right: 1px solid rgba(0, 0, 0, 0.24);
+}
+
+.map__location-info_metric.last {
+  border-right-style: none;
+}
+
+.map__location-info_title {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 2px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
+  color: #666;
+  font-size: 0.6em;
+  line-height: 100%;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.map__location-info_value {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
+  font-size: 1.2em;
+  text-align: center;
+}
+
+.map__location-info_inner {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-right: 4px;
+  margin-left: 4px;
+  padding-top: 10px;
+  border-top: 1px solid rgba(0, 0, 0, 0.24);
+}
+
+.map__location-tags_wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.styles.hide {
+  position: relative;
+  z-index: 9999;
+  display: none;
+}
+
+.search__list-item_parent {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 6px;
+  padding-left: 6px;
+  border-left: 1px solid #505050;
+  color: hsla(0, 0%, 100%, 0.32);
+}
+
+.search__list-item_geography {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 @media (max-width: 991px) {
