--- a/src/css/wazi.webflow.css
+++ b/src/css/wazi.webflow.css
@@ -913,7 +913,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 70%;
+  width: 0%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -1646,6 +1646,7 @@ a {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  opacity: 0;
 }
 
 .data-category__title_underline--with-icon {
@@ -1925,7 +1926,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 32px;
+  margin-bottom: 48px;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
@@ -1986,6 +1987,7 @@ a {
 
 .hover-menu {
   position: relative;
+  z-index: 10;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2939,7 +2941,7 @@ a {
 }
 
 .point-data__h1_trigger._4.active-4 {
-  background-color: #e4ffe7;
+  background-color: #cef3b2;
 }
 
 .point-data__h1_trigger._5 {
@@ -3064,7 +3066,7 @@ a {
 }
 
 .point-data__h2.active-4 {
-  background-color: #e4ffe7;
+  background-color: #cef3b2;
   color: #000;
 }
 
@@ -4267,10 +4269,6 @@ a {
   align-self: stretch;
 }
 
-.styles__map-tooltips_wrapper.dark {
-  background-color: #000;
-}
-
 .point-marker__shadow {
   position: absolute;
   top: auto;
@@ -4942,7 +4940,8 @@ a {
 }
 
 .indicator__chart.bar {
-  width: 100%;
+  width: 85%;
+  margin-bottom: 48px;
 }
 
 .toggle__icon--vertical--small {
@@ -5058,7 +5057,7 @@ a {
 .green--secondary {
   width: 24px;
   height: 24px;
-  background-color: #e4ffe7;
+  background-color: #cef3b2;
 }
 
 .yellow--primary {
@@ -5650,25 +5649,6 @@ a {
   cursor: pointer;
 }
 
-.point-data__content_inner {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-  padding-bottom: 4px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-}
-
 .map-settings__header {
   display: -webkit-box;
   display: -webkit-flex;
@@ -5979,26 +5959,6 @@ a {
   text-transform: uppercase;
 }
 
-.map_legend-block._1 {
-  background-color: rgba(57, 173, 133, 0.1);
-  font-size: 0.65em;
-}
-
-.map_legend-block._3 {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.4)), to(hsla(0, 0%, 100%, 0.4)));
-  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.4), hsla(0, 0%, 100%, 0.4));
-}
-
-.map_legend-block._4 {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.2)), to(hsla(0, 0%, 100%, 0.2)));
-  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.2), hsla(0, 0%, 100%, 0.2));
-}
-
-.map_legend-block._5 {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0)), to(hsla(0, 0%, 100%, 0)));
-  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0), hsla(0, 0%, 100%, 0));
-}
-
 .map-legend__label {
   margin-right: 4px;
   margin-left: 4px;
@@ -6017,13 +5977,18 @@ a {
 }
 
 .styles__charts_wrapper {
-  padding-top: 48px;
-  padding-right: 16px;
-  padding-left: 16px;
+  position: relative;
+  padding: 48px 16px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+}
+
+.bar-chart {
+  position: relative;
+  width: 100%;
+  font-size: 0.8em;
 }
 
 .breadcrumb__loading {
@@ -6041,7 +6006,7 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  opacity: 0.63;
+  opacity: 1;
   font-size: 0.8em;
 }
 
@@ -6055,6 +6020,283 @@ a {
   display: -ms-flexbox;
   display: flex;
   width: 24px;
+}
+
+.bar-chart__row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 32px;
+  margin-bottom: 8px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  background-color: hsla(0, 0%, 94.5%, 0);
+  -webkit-transition: all 100ms ease;
+  transition: all 100ms ease;
+  color: #999;
+  cursor: pointer;
+}
+
+.bar-chart__row:hover {
+  color: #000;
+}
+
+.bar-chart__row_bar {
+  position: relative;
+  z-index: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30%;
+  height: 100%;
+  min-width: 1px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #39ad84;
+  background-image: none;
+}
+
+.bar-chart__row_bar:hover {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0.1)));
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
+}
+
+.bar-chart__row_bar._2 {
+  width: 60%;
+}
+
+.bar-chart__row_bar._3 {
+  width: 65%;
+}
+
+.bar-chart__row_bar._4 {
+  width: 10%;
+}
+
+.bar-chart__row_bar._5 {
+  width: 100%;
+}
+
+.bar-chart__rows {
+  position: relative;
+  padding-bottom: 6px;
+}
+
+.bar-chart__underline {
+  height: 1px;
+  margin-top: 16px;
+  margin-left: 100px;
+  background-color: #e6e6e6;
+}
+
+.bar-chart__labels {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding-left: 100px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  color: #999;
+}
+
+.bar-chart__label {
+  position: relative;
+  width: 1px;
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.bar-chart__label_position {
+  position: absolute;
+  left: 0px;
+  top: 100%;
+  right: 0px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 6px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  white-space: nowrap;
+}
+
+.bar-chart__label_value {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 60px;
+  padding-right: 8px;
+  padding-left: 8px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-size: 0.8em;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.bar-chart__row_tooltip {
+  position: absolute;
+  left: 100%;
+  top: -32px;
+  right: 0%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.bar-chart__row_tooltip-card {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 24px;
+  padding-right: 4px;
+  padding-left: 4px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ccc;
+  border-radius: 2px;
+  background-color: #fff;
+  box-shadow: 0 2px 8px -4px #000;
+  white-space: nowrap;
+}
+
+.bar-chart__row_tooltip-notch {
+  position: absolute;
+  bottom: -4px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 8px;
+  height: 8px;
+  border-style: none solid solid none;
+  border-width: 1px;
+  border-color: #ccc;
+  background-color: #fff;
+  box-shadow: 1px 1px 4px -2px rgba(0, 0, 0, 0.86);
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.bar-chart__info {
+  position: absolute;
+  left: 0%;
+  top: auto;
+  right: 0%;
+  bottom: -48px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding-left: 100px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.bar-chart__info_x-label {
+  padding-right: 6px;
+  padding-left: 6px;
+  color: #666;
+  font-size: 0.75em;
+  text-transform: uppercase;
+}
+
+.bar-chart__row_label {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100px;
+  max-width: 100px;
+  padding-right: 8px;
+  padding-left: 8px;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  line-height: 140%;
+  text-align: right;
+  letter-spacing: -0.03em;
+}
+
+.bar-chart__row-wrapper {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background-image: none;
+}
+
+.bar-chart__row-wrapper:hover {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.04)), to(rgba(0, 0, 0, 0.04)));
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.04), rgba(0, 0, 0, 0.04));
+}
+
+.bar-chart__tooltip_value {
+  color: #000;
+  font-weight: 700;
+}
+
+.bar-chart__tooltip_description {
+  margin-left: 4px;
+  color: #666;
 }
 
 @media (max-width: 991px) {
