--- a/src/css/wazi.webflow.css
+++ b/src/css/wazi.webflow.css
@@ -5929,7 +5929,7 @@ a {
   -ms-flex-pack: justify;
   justify-content: space-between;
   border-radius: 4px;
-  background-color: hsla(0, 0%, 100%, 0.63);
+  background-color: #fff;
   box-shadow: 0 1px 6px -2px rgba(0, 0, 0, 0.3), 0 0 0 -1px rgba(0, 0, 0, 0.2);
 }
 
@@ -5953,8 +5953,9 @@ a {
   -ms-flex-align: center;
   align-items: center;
   border-radius: 2px;
-  background-color: #39ad84;
+  background-color: #203761;
   font-size: 0.6em;
+  text-align: center;
   letter-spacing: 0.2px;
   text-transform: uppercase;
 }
@@ -5988,6 +5989,9 @@ a {
 .bar-chart {
   position: relative;
   width: 100%;
+}
+
+.bar-chart.test {
   font-size: 0.8em;
 }
 
@@ -6271,9 +6275,6 @@ a {
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
-  line-height: 140%;
-  text-align: right;
-  letter-spacing: -0.03em;
 }
 
 .bar-chart__row-wrapper {
@@ -6294,12 +6295,130 @@ a {
   font-weight: 700;
 }
 
-.bar-chart__tooltip_description {
-  margin-left: 4px;
-  color: #666;
+.map-cluster {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 48px;
+  height: 48px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-radius: 100px;
+  box-shadow: 0 2px 8px -4px #000;
 }
 
-@media (max-width: 991px) {
+.map-cluster__notch {
+  position: absolute;
+  left: 18px;
+  right: 18px;
+  bottom: -5px;
+  z-index: 0;
+  width: 12px;
+  height: 12px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #fff;
+  box-shadow: 1px 1px 8px -4px #000;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.map-cluster__pie {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  z-index: 2;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.map-cluster__value {
+  position: absolute;
+  left: 5px;
+  top: -16px;
+  right: 5px;
+  bottom: auto;
+  z-index: 1;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 38px;
+  padding-bottom: 24px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #fff;
+  box-shadow: 0 1px 8px -4px #000;
+  font-size: 0.65em;
+  text-align: center;
+}
+
+.bc__row_label {
+  font-size: 11px;
+  line-height: 130%;
+  text-align: right;
+  letter-spacing: -0.03em;
+}
+
+.bc__tooltip_description {
+  margin-left: 4px;
+  color: #666;
+  font-size: 11px;
+}
+
+.bc__tooltip_description.truncate {
+  color: #999;
+}
+
+.bc__tooltip_value {
+  color: #000;
+  font-size: 11px;
+  font-weight: 700;
+}
+
+.bc__label_value {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 6px;
+  padding-left: 6px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-size: 11px;
+  text-align: center;
+}
+
+.bc__info_x-label {
+  padding-right: 8px;
+  padding-left: 8px;
+  color: #666;
+  font-size: 11px;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 991px) {
   .grid__module_col.col_m_1 {
     max-width: 8.333333%;
     -webkit-flex-basis: 8.33%;
@@ -6392,7 +6511,7 @@ a {
   }
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .grid__module_col.col_sm_1 {
     max-width: 8.333333%;
     -webkit-flex-basis: 8.33%;
@@ -6473,7 +6592,7 @@ a {
   }
 }
 
-@media (max-width: 479px) {
+@media screen and (max-width: 479px) {
   .grid__module_row {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
