--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -807,14 +807,11 @@ label {
   display: -ms-grid;
   display: grid;
   width: 100%;
+  min-height: 28px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
   grid-auto-columns: 1fr;
   grid-column-gap: 4px;
   grid-row-gap: 16px;
@@ -983,13 +980,14 @@ label {
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.08), rgba(0, 0, 0, 0.02) 34%, transparent);
 }
 
-.location__sources {
+.location__facilities_sources {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-right: -2px;
-  margin-left: -2px;
+  margin-top: 16px;
+  margin-right: 6px;
+  margin-left: 6px;
   padding-bottom: 12px;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
@@ -1001,10 +999,10 @@ label {
   -webkit-align-self: stretch;
   -ms-flex-item-align: stretch;
   align-self: stretch;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   border-bottom: 1px dashed #e6e6e6;
   border-radius: 2px;
 }
@@ -6179,6 +6177,15 @@ label {
   font-size: 0.85em;
 }
 
+.print-styling {
+  position: absolute;
+  left: 0%;
+  top: auto;
+  right: 0%;
+  bottom: 0%;
+  height: 0px;
+}
+
 @media screen and (max-width: 991px) {
   .rich-data-content {
     padding-top: 44px;
@@ -6415,7 +6422,7 @@ label {
     display: flex;
     background-color: #333;
   }
-  .location__sources {
+  .location__facilities_sources {
     margin-left: -8px;
   }
   .sticky-header {
